Fixing some css/layout issues

--- a/app/styles/header.component.css
+++ b/app/styles/header.component.css
@@ -1,5 +1,5 @@
-#login {
-  z-index: 0;
+.gitkit-user-card-menu {
+  z-index: 10;
 }
 
 .header {
